--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -44,3 +44,8 @@ button {
         align-items: center;
     }
 }
+
+.list-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
